# gavai-henshin

./: .env.example  .gitattributes  .gitignore  .tmp-dashboard.err  CONTRIBUTING.md  LICENSE  Lore Bible.md  README.md  blueprint.md  package-lock.json  package.json  pyproject.toml  vite.quest.config.js
.playwright-cli/: page-2026-03-07T08-05-23-874Z.yml  page-2026-03-07T08-06-43-553Z.yml  page-2026-03-07T08-07-27-956Z.yml  page-2026-03-07T08-13-04-508Z.yml  page-2026-03-07T08-13-25-080Z.yml  page-2026-03-07T08-13-47-445Z.yml  page-2026-03-07T09-12-56-241Z.yml  page-2026-03-07T09-13-37-115Z.yml  page-2026-03-07T09-13-56-957Z.yml  page-2026-03-07T09-14-05-473Z.yml  page-2026-03-07T09-14-07-910Z.yml  page-2026-03-07T09-14-10-343Z.yml  page-2026-03-07T14-24-18-076Z.yml  page-2026-03-07T14-32-41-612Z.yml  page-2026-03-07T14-34-00-363Z.yml  page-2026-03-07T14-35-38-902Z.yml
config/: new-route.canonical.json  provisional_rules.json
docs/: 8thwall-element-integration.md  architecture.md  armor-build-wave1-results.md  armor-part-fit-modeler-requests.before.md  armor-part-fit-modeler-requests.md  armory-io-contract.md  backend-gcp-migration-notes.md  base-suit-overlay-contract.md  body-fit-viewer.md  body-fit-webcam-check.md  concept-driven-refactor.md  execution-plan.md  execution-prep.md  game-studio-xr-poc-brief.md  game-studio-xr-prompt-template.md  gate0-checklist.md  id-policy.md  iw-henshin-module.md  modeler-armor-brief.md  modeler-context-and-actions-2026-04-30.md  modeler-new-route-acceptance-spec.md  modeler-wave1-checklist.md  modeler-wave1pp-practical-handoff.md  (+21 more)
(+282 files in other folders)
